k8s/stlone.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clone
spec:
  selector:
    matchLabels:
      run: clone
  template:
    spec:
      containers:
      - name: clone
        image: ashraf1abdelrasool/clone:0.0.1-SNAPSHOT
        imagePullPolicy: always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: clone
  labels:
    run: clone
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8081
    protocol: tcp
  type: ClusterIp
  selector:
    run: clone
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /clone
        backend:
          serviceName: clone
          servicePort: 80
